# videoreader

./: README.md  build_env.yml  filevideostream.py  pyproject.toml  setup.py  test_threaded.ipynb  videocaptureasync.py  videoreader.py  videoreader_threaded.py
.github/workflows/: main.yml  publish.yml
conda/pyvideoreader/: bld.bat  build.sh  meta.yaml
src/: videoreader.py
tests/: test_videoreader.py
