[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
dist-name = "pyvideoreader"
module = "videoreader"
author = "Jan Clemens"
author-email = "clemensjan@googlemail.com"
home-page = "https://github.com/postpop/videoreader"
classifiers = ["License :: OSI Approved :: MIT License"]
requires-python = ">=3.5"
requires = ['opencv-python-headless>=3.0']
description-file = "README.md"
