[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
dist-name = "pyvideoreader"
module = "videoreader"
author = "Jan Clemens"
author-email = "clemensjan@googlemail.com"
home-page = "https://github.com/postpop/videoreader"
classifiers = ["License :: OSI Approved :: MIT License"]
requires-python = ">=3.5"
requires = ['opencv-python-headless>=3.0']
description-file = "README.md"


[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests",]
