[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pyvideoreader"
authors = [
    {name = "Jan Clemens", email = "clemensjan@googlemail.com"}
]
classifiers = ["License :: OSI Approved :: MIT License"]
requires-python = ">=3.7"
# dependencies = ["opencv-python-headless>=3.0"]
dependencies = [
    'opencv-python-headless>=3.0; python_version < "3.10"',
    'opencv-python; python_version >= "3.10"',
]
readme = "README.md"
description = "Wrapper around opencv's cv2.VideoCapture to simplify reading video files in python."
dynamic = ["version"]
license = {file = "LICENSE"}

[project.urls]
Documentation = "https://github.com/postpop/videoreader"
Source = "https://github.com/postpop/videoreader"

[tool.flit.module]
name = "videoreader"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests",]
